# Convex-Hull

./: CMakeLists.txt  README.md
src/: Application.cpp  Application.hpp  Complex.cpp  Complex.hpp  Hull.cpp  Hull.hpp  Set.cpp  Set.hpp  main.cpp
